recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: '(' expected but '{' found.
	else if {
                ^Tree:16: error: illegal start of simple expression
	}
        ^Tree:21: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:35: error: expected start of definition
	override def run() {
                 ^Tree:39: error: Unmatched closing brace '}' ignored here
}
^